// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Entry /> It renders Not Found for missing entry 1`] = `<NotFound />`;

exports[`<Entry /> It renders entry with history 1`] = `
<Fragment>
  <Navigation
    entry={
      {
        "name": "PHP",
      }
    }
    home={null}
    quadrant={
      {
        "dirname": "dev",
        "name": "Development",
      }
    }
    tag={null}
  />
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="entry-container"
      >
        <h1>
          PHP
        </h1>
        <img
          alt="PHP"
          className="entry-logo"
          src="https://www.php.net/images/logos/php-logo.svg"
        />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="badges"
      >
        <Badge
          className="Hold"
          icon="map-marker"
          link={null}
          text="Hold"
        />
        <Badge
          className=""
          icon="clock-o"
          link={null}
          text="Jan 1, 2004"
        />
        <LicenseBadges
          license={
            {
              "commercial": null,
              "openSource": null,
            }
          }
        />
      </div>
      <div
        className="twelve columns"
      >
        <lr>
          Description
        </lr>
        <h2>
          Rationale
        </h2>
        <lr>
          Rationale
        </lr>
        <License
          license={
            {
              "commercial": null,
              "openSource": null,
            }
          }
        />
        <Related
          related={[]}
        />
        <History
          history={
            [
              {
                "date": "Jan 1, 2004",
                "ringName": "Adopt",
              },
              {
                "date": "Mar 20, 2018",
                "ringName": "Hold",
              },
            ]
          }
        />
      </div>
    </div>
    <div
      className="u-pull-right"
    >
      <Tags
        tags={
          [
            "90's",
          ]
        }
      />
    </div>
  </div>
</Fragment>
`;

exports[`<Entry /> It renders entry with related links 1`] = `
<Fragment>
  <Navigation
    entry={
      {
        "name": "Java",
      }
    }
    home={null}
    quadrant={
      {
        "dirname": "dev",
        "name": "Development",
      }
    }
    tag={null}
  />
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="entry-container"
      >
        <h1>
          Java
        </h1>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="badges"
      >
        <Badge
          className="Adopt"
          icon="map-marker"
          link={null}
          text="Adopt"
        />
        <Badge
          className=""
          icon="clock-o"
          link={null}
          text="Mar 20, 2018"
        />
        <LicenseBadges
          license={
            {
              "commercial": null,
              "openSource": null,
            }
          }
        />
      </div>
      <div
        className="twelve columns"
      >
        <lr>
          Description
        </lr>
        <h2>
          Rationale
        </h2>
        <lr>
          Rationale
        </lr>
        <License
          license={
            {
              "commercial": null,
              "openSource": null,
            }
          }
        />
        <Related
          related={
            [
              {
                "file": "php.html",
                "name": "PHP",
              },
            ]
          }
        />
        <History
          history={[]}
        />
      </div>
    </div>
    <div
      className="u-pull-right"
    >
      <Tags
        tags={
          [
            "90's",
            "java",
          ]
        }
      />
    </div>
  </div>
</Fragment>
`;

exports[`<Entry /> It renders inactive statement 1`] = `
<Fragment>
  <Navigation
    entry={
      {
        "name": "Lisp",
      }
    }
    home={null}
    quadrant={
      {
        "dirname": "dev",
        "name": "Development",
      }
    }
    tag={null}
  />
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="twelve columns inactive-note"
      >
        <strong>
          <Icon
            name="exclamation-triangle"
            spaceBefore={true}
          />
          Not active on the current version!
        </strong>
        <br />
        This blip is not on the current version of the radar. If it was recently archived it is likely that it is still relevant. If the blip is older it might no longer be relevant or our assessment of it might be different today.
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="entry-container"
      >
        <h1>
          Lisp
        </h1>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="badges"
      >
        <Badge
          className="Hold"
          icon="map-marker"
          link={null}
          text="Hold"
        />
        <Badge
          className=""
          icon="clock-o"
          link={null}
          text="Jan 1, 1970"
        />
        <LicenseBadges
          license={
            {
              "commercial": null,
              "openSource": null,
            }
          }
        />
      </div>
      <div
        className="twelve columns"
      >
        <lr>
          Description
        </lr>
        <h2>
          Rationale
        </h2>
        <lr>
          Rationale
        </lr>
        <License
          license={
            {
              "commercial": null,
              "openSource": null,
            }
          }
        />
        <Related
          related={[]}
        />
        <History
          history={
            [
              {
                "date": "Jan 1, 1970",
                "ringName": "Adopt",
              },
              {
                "date": "Mar 20, 2018",
                "ringName": "Hold",
              },
              {
                "date": "Aug 23, 2019",
                "ringName": "Archive",
              },
            ]
          }
        />
      </div>
    </div>
    <div
      className="u-pull-right"
    >
      <Tags
        tags={[]}
      />
    </div>
  </div>
</Fragment>
`;

exports[`<Entry /> It renders logotype if present 1`] = `
<Fragment>
  <Navigation
    entry={
      {
        "name": "PHP",
      }
    }
    home={null}
    quadrant={
      {
        "dirname": "dev",
        "name": "Development",
      }
    }
    tag={null}
  />
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="entry-container"
      >
        <h1>
          PHP
        </h1>
        <img
          alt="PHP"
          className="entry-logo"
          src="https://www.php.net/images/logos/php-logo.svg"
        />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="badges"
      >
        <Badge
          className="Hold"
          icon="map-marker"
          link={null}
          text="Hold"
        />
        <Badge
          className=""
          icon="clock-o"
          link={null}
          text="Jan 1, 2004"
        />
        <LicenseBadges
          license={
            {
              "commercial": null,
              "openSource": null,
            }
          }
        />
      </div>
      <div
        className="twelve columns"
      >
        <lr>
          Description
        </lr>
        <h2>
          Rationale
        </h2>
        <lr>
          Rationale
        </lr>
        <License
          license={
            {
              "commercial": null,
              "openSource": null,
            }
          }
        />
        <Related
          related={[]}
        />
        <History
          history={
            [
              {
                "date": "Jan 1, 2004",
                "ringName": "Adopt",
              },
              {
                "date": "Mar 20, 2018",
                "ringName": "Hold",
              },
            ]
          }
        />
      </div>
    </div>
    <div
      className="u-pull-right"
    >
      <Tags
        tags={
          [
            "90's",
          ]
        }
      />
    </div>
  </div>
</Fragment>
`;
